@@ -19,16 +19,16 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Japanese text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'ココにコメントを入力...',
-	'reply-form'		=> 'ココに返信を入力...',
+	'comment-form'		=> 'ココにコメントを入力…',
+	'reply-form'		=> 'ココに返信を入力…',
 	'form-tip'		=> 'HTML容認：&lt;b&gt;、&lt;u&gt;、&lt;i&gt;、&lt;s&gt;、&lt;pre&gt;、&lt;ul&gt;、&lt;ol&gt;、&lt;li&gt;、&lt;blockquote&gt;、&lt;code&gt;はHTMLをエスケープ、URLは自動的にリンクになり、とここで[img]URLここ[/img]外部画像を表示します。',
 	'post-button'		=> '送信する',
 	'login'			=> 'ログイン',
 	'login-tip'		=> 'ログイン (任意)',
 	'logout'		=> 'ログアウト',
-	'pending-name'		=> '保留中...',
-	'deleted-name'		=> 'は削除...',
-	'error-name'		=> 'エラー...',
+	'pending-name'		=> '保留中…',
+	'deleted-name'		=> 'は削除…',
+	'error-name'		=> 'エラー…',
 	'pending-note'		=> 'このコメントは承認が保留されています。',
 	'deleted-note'		=> 'このコメントは削除されました。',
 	'error-note'		=> '何かが間違っていました。このコメントを取得できませんでした。',
@@ -108,7 +108,7 @@ $locale = array (
 	'date-today'		=> '%s今日',
 	'untitled'		=> 'タイトルなし',
 	'external-image-tip'	=> '遠隔画像表示しにはクリック',
-	'loading'		=> 'ローディング...',
+	'loading'		=> 'ローディング…',
 	'click-to-close'	=> '閉じるにはクリック',
 	'hashover-comments'	=> 'HashOverコメント',
 	'rss-feed'		=> 'RSSフィード',
