@@ -694,9 +694,13 @@ Copyright (C) 2016 Jacob Barkdull
 	cursor: pointer;
 }
 
-#hashover .hashover-select-wrapper {
+#hashover .hashover-select-wrapper,
+#hashover .hashover-embedded-image-wrapper {
 	display: inline-block;
 	position: relative;
+}
+
+#hashover .hashover-select-wrapper {
 	overflow: hidden;
 	margin-top: -3px;
 	vertical-align: middle;
@@ -924,6 +928,8 @@ Copyright (C) 2016 Jacob Barkdull
 #hashover .hashover-loading:before {
 	content: " " ! important;
 	display: inline-block;
+	min-width: 16px;
+	min-height: 16px;
 	vertical-align: middle;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
@@ -935,6 +941,28 @@ Copyright (C) 2016 Jacob Barkdull
 	image-rendering: crisp-edges;
 	image-rendering: pixelated;
 	-ms-interpolation-mode: nearest-neighbor;
+	z-index: 1;
+}
+
+#hashover .hashover-embedded-image-wrapper.hashover-loading img {
+	filter: grayscale(1.0);
+	opacity: 0.25;
+	filter: alpha(opacity=25);
+}
+
+#hashover .hashover-embedded-image-wrapper.hashover-loading:before {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+#hashover #hashover-more-link.hashover-loading:before,
+#hashover .hashover-thread-link.hashover-loading:before {
+	margin-right: 8px;
+	margin-top: -8px;
+	margin-bottom: -6px;
 }
 
 #hashover #hashover-more-link.hashover-hide-morelink {
